2006-06-02  Ben Elliston  <bje@gnu.org>

	* config/sim.exp (sim_upload): Match up argument names.

2006-06-02  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2006-06-02  Ben Elliston  <bje@gnu.org>

	* config/dos.exp (dos_open): Only run global board_info once at
	the beginning of the proc; remove duplicates.
	(dos_load): Use file join to separate path components.
	(dos_copy_upload): Likewise.
	* lib/remote.exp (call_remote): Use error, not "blooie" to trigger
	an error.

2006-06-02  Ben Elliston  <bje@gnu.org>

	* contrib/compare_tests: Import from the GCC contrib directory.

2006-05-24  Ben Elliston  <bje@gnu.org>

	* runtest.exp (verbose): Brace some expressions.
	(load_file, search_and_load_file): Likewise.
	(runtest): Likewise.

2006-05-23  Ben Elliston  <bje@gnu.org>

	* config/gdb-comm.exp (gdb_comm_load): Brace some expressions.
	* config/i960.exp (i960_spawn): Initialise status.
	* config/netware.exp (${board}_init): Brace some if expressions.
	* lib/dg.exp (dg-test): Brace some expressions.
	* lib/framework.exp (clone_output, log_and_exit, log_summary,
	record_test, pass, fail): Likewise.
	* lib/libgloss.exp (get_multilibs): Likewise.
	* lib/remote.exp (standard_transmit, unix_clean_filename,
	remote_load, check_for_board_status, remote_expect): Likewise.
	* lib/rsh.exp (rsh_exec): Likewise.

2006-05-22  Ben Elliston  <bje@gnu.org>

	* baseboards/cris-sim.exp: Use switch, not case.
	* baseboards/h8300.exp: Likewise.
	* config/base68k.exp (base68k_ld): Brace an if expression.

2006-05-22  Ben Elliston  <bje@gnu.org>

	* runtest.exp, baseboards/basic-sim.exp, baseboards/cf.exp,
	baseboards/cris-sim.exp, baseboards/i960-cyclone.exp,
	baseboards/mcore-moto-sim.exp, baseboards/mips64vr4100-sim.exp,
	baseboards/mmixware-sim.exp, baseboards/op50n.exp,
	baseboards/rom68k-idp.exp, baseboards/sparclite-sim-le.exp,
	baseboards/usparc-cygmon.exp, config/base-config.exp,